tenants/platform/services/db-ui/postInstall/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: db-ui
  namespace: database
  labels:
    app.kubernetes.io/part-of: db-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  parentRefs:
    - name: platform-gateway
      namespace: nginx-gateway
      sectionName: https
  hostnames:
    - dbui.jdwlabs.com
  rules:
    - backendRefs:
        - name: db-ui
          port: 80
