tenants/platform/services/db-ui/postInstall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-ui-ingress
  labels:
    name: db-ui-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dbui.jdwlabs.com
      secretName: db-ui-tls
  rules:
    - host: dbui.jdwlabs.com
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: db-ui-adminer
                port:
                  number: 80
